--- a/css/index.css
+++ b/css/index.css
@@ -67,28 +67,63 @@ p {
 }
 
 body {
-    border: 1px dashed black;
-    padding-left: 30px 0px 0px 30px;
+    
+    padding: 60px 20px 20px 60px;
     width: 900px;
+    margin: auto;
     
 }
 
   nav {
-    display: flex;
     vertical-align: top;
     margin-top: 35px;
     margin-left: 30px;
+    display: flex;
     
   }
   
   nav a {
-    margin-right: 65px;
+    margin: auto;
     font-size: 14px;
     text-decoration: none;
     color: black;
-    width: 600px;
+    width: 100px;
   }
 
+  .container {
+      display: flex;
+      padding-bottom: 30px;
+      
+  }
+
+  .about-page {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
+    padding: 15px;
+  }
+
+  .about-content {
+	justify-content: space-evenly;
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.about-item {
+    max-width: 400px;
+    padding: 25px;
+}
+.about-item-content {
+    border-bottom: 1px dashed black;
+    padding: 10px;
+}
+.learn-more-btn {
+    border: 2px solid black;
+    background: transparent;
+    border-radius: 5px;
+}
 
 .top-content {
     display: flex;
@@ -134,6 +169,118 @@ body {
     justify-content: center;
 }
 
+.box-1 {
+    width: 12.5%;
+    height: 100px;
+    background: teal;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-2 {
+    width: 12.5%;
+    height: 100px;
+    background:gold;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-3 {
+    width: 12.5%;
+    height: 100px;
+    background: cadetblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-4 {
+    width: 12.5%;
+    height: 100px;
+    background: coral;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-5 {
+    width: 12.5%;
+    height: 100px;
+    background: crimson;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-6 {
+    width: 12.5%;
+    height: 100px;
+    background: forestgreen;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-7 {
+    width: 12.5%;
+    height: 100px;
+    background: darkorchid;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-8 {
+    width: 12.5%;
+    height: 100px;
+    background: hotpink;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-9 {
+    width: 12.5%;
+    height: 100px;
+    background: indigo;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-10 {
+    width: 12.5%;
+    height: 100px;
+    background: dodgerblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
@@ -151,7 +298,7 @@ body {
 footer {
     width: 100%;
     background: black;
-    height: 40px;
+    height: 50px;
 }
 
 footer nav {
@@ -161,9 +308,12 @@ footer nav {
     align-items: center;
     padding: 20px 2%;
     font-size: 14px;
+    
 }
 
 footer nav a {
     color: white;
     text-decoration: none;
+    justify-content: center;
+
 }
