--- a/css/index.css
+++ b/css/index.css
@@ -169,114 +169,52 @@ body {
     justify-content: center;
 }
 
-.box-1 {
-    width: 12.5%;
-    height: 100px;
+.boxes .box:nth-child(1) {
     background: teal;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.box-2 {
-    width: 12.5%;
-    height: 100px;
+.boxes .box:nth-child(2) {
     background:gold;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.box-3 {
-    width: 12.5%;
-    height: 100px;
+.boxes .box:nth-child(3) {
     background: cadetblue;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
 }
 
-.box-4 {
-    width: 12.5%;
-    height: 100px;
+.boxes .box:nth-child(4) {
     background: coral;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
 }
 
-.box-5 {
-    width: 12.5%;
-    height: 100px;
+.boxes .box:nth-child(5) {
     background: crimson;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
 }
 
-.box-6 {
-    width: 12.5%;
-    height: 100px;
+.boxes .box:nth-child(6) {
     background: forestgreen;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
 }
 
-.box-7 {
-    width: 12.5%;
-    height: 100px;
+.boxes .box:nth-child(7) {
     background: darkorchid;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
 }
 
-.box-8 {
-    width: 12.5%;
-    height: 100px;
+.boxes .box:nth-child(8) {
     background: hotpink;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
 }
 
-.box-9 {
-    width: 12.5%;
-    height: 100px;
+.boxes .box:nth-child(9) {
     background: indigo;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+   
 }
 
-.box-10 {
-    width: 12.5%;
-    height: 100px;
+.boxes .box:nth-child(10) {
     background: dodgerblue;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
 }
 
 
